# spacy-ru

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.rst  README_RU.MD  convert-dir.sh  convert.sh  convert_dir.sh  cuda.sh  eval-ner.sh  eval.sh  pyproject.toml  requirements.txt  setup.py  tokenize-ru.sh  tokenize-xx.sh
examples/: POS_and_syntax.ipynb  classifier.py  full_simple_example.py  linguistics.py  sentences.py  tokenizer_ru.py  tokenizer_xx.py  use_tokenize.ipynb
examples/tokenize/: linguistics.py  sentences.py  tokenizer_ru.py  tokenizer_xx.py  use_tokenize.ipynb  utils.py
models/: dep.py  loadvec.py  ner.py  pos.py  t2v.py  vec.py
notebooks/corpora/: kaggle_ru.ipynb  load_syntagrus.ipynb  prepare_nerus.ipynb
notebooks/examples/: analysis.py  introspect_model.ipynb  textcat_news_topics.ipynb
notebooks/training/: eval_pos_dep.ipynb  factu_ner_example.ipynb  load_ru2e.ipynb  prepare_ru2e.ipynb  train_ner_multiple_datasets_experimental.ipynb  train_ner_nerus.ipynb  train_ner_nerus2.ipynb  train_pos_gpu.ipynb  train_pos_gpu_final.ipynb
ru2/: __init__.py  accuracy.txt  lemmatizer.py  meta.json  syntax_iterators.py  tokenizer
ru2/ner/: cfg  lower_model  model  moves  tok2vec_model  upper_model
ru2/parser/: cfg  lower_model  model  moves  upper_model
ru2/tagger/: tag_map
ru2e/: __init__.py  lemmatizer.py  meta.json  syntax_iterators.py  tokenizer  tokenizer.py
training/: clean_nerus.py  fix_conllu.py  lemmatize.py  navec2spacy.py  navec2spacy_v1.py  spacy_train.py  split_nerus.py  train_ner.py  train_ner_old.py  train_pos_dep.py  trainer.py
training/corpora/: nerus.py  syntagrus.py
utils/: corpus.py  pluck.py  tqdm.py
vec/: fasttext_vec.ipynb  loadvec.ipynb  loadvec.py  vec.py  vec_utils.py
