[tool.poetry]
name = "spacy-ru"
version = "0.2.1"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
spacy = "^2.2.3"
jupyter = ">=1.0.0"
notebook = ">=6.0.2"
razdel = ">=0.4.0"
pymorphy2 = {extras = ["fast"], version = ">=0.8"}
spacy-lookups-data = "*"
cupy = {extras = ["cuda102"], version = "^7.3.0"}
thinc = ">=7.0.8"
tabulate = ">=0.8.6"
sklearn = ">=0.0"
corus = ">=0.5.0"
nerus = ">=1.4.0"
pymystem3 = ">=0.2.0"
pandas = ">=0.23"
torch = "^1.4.0"
fasttext = "^0.9.1"
livelossplot = "^0.4.1"
compress_fasttext = "^0.0.2"
dj_database_url = "^0.5.0"
environs = "^7.3.0"
furl = "^2.1.0"
django = "<3"
whitenoise = "^5.0.1"
cupy-cuda100 = "^7.3.0"
navec = "^0.9.0"

[tool.poetry.dev-dependencies]
#spacy = { git = "https://github.com/buriy/spaCy.git", branch = "master" }
black = {version = "^19.10b0", allow-prereleases = true}
