[tool.poetry]
name = "spacy-ru"
version = "2.3.0"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

pymorphy2 = {extras = ["fast"], version = ">=0.8"}
# pymystem3 = ">=0.2.0"

spacy-lookups-data = "*"
cupy = "^7.6.0"
thinc = ">=7.0.8"

razdel = ">=0.4.0"
corus = ">=0.5.0"
nerus = ">=1.4.0"
navec = ">=0.9.0"

sklearn = ">=0.0"
pandas = ">=0.23"
torch = "^1.4.0"

livelossplot = "^0.4.1"
tabulate = ">=0.8.6"

# fasttext = "^0.9.1"
compress_fasttext = "^0.0.2"
spacy = "^2.3.1"
conllu = "^4.2"
wheel = "^0.35.1"

[tool.poetry.dev-dependencies]
#spacy = { git = "https://github.com/buriy/spaCy.git", branch = "master" }
black = {version = "^19.10b0", allow-prereleases = true}
jupyter = ">=1.0.0"
notebook = ">=6.0.2"
